<resources>
    <string name="app_name" translatable="false">PPMatcher</string>
    <string name="login_or_signup" translatable="false">Login or Sign up</string>
    <string name="signup" translatable="false">Sign up</string>
    <string name="login" translatable="false">Log in</string>
    <string name="Email" translatable="false">E-mail</string>
    <string name="Password" translatable="false">Password</string>
    <string name="Registration_Error" translatable="false">Registration Error</string>
    <string name="Login_Error" translatable="false">Login Error</string>
    <string name="Personal_Profile_Matcher" translatable="false">Personal Profile Matcher</string>
    <string name="A_University_Application_Based_Dating_App" translatable="false">An University Application-Based Dating App</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="create_profile">Create Profile</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="title_activity_pp_creator_tabbed">ppCreatorTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_identify_as">I identify as:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="i_am_interested_in">I am interested in:</string>
    <string name="interest_similarity"><![CDATA[I am interested in (Similar) <--> (Different) People]]></string>
    <string name="i_am_in_the_faculty_school_etc_of">I am in the Faculty/School/etc. of:</string>
    <string name="my_year">My year:</string>
    <string name="year_interested_low">Year interested (low)</string>
    <string name="year_interested_high">Year interested (high)</string>
    <string name="response_1">Response #1</string>
    <string name="prompt_1">Prompt #1</string>
    <string name="prompt_2">Prompt #2</string>
    <string name="response_2">Response #2</string>
    <string name="prompt_3">Prompt #3</string>
    <string name="response_3">Response #3</string>
    <string name="faculty_school_etc">Faculty/School/etc</string>
    <string name="sign_out">Sign Out</string>
    <string name="year">Year</string>
    <string name="average">average</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="all_out_of_profiles">All out of profiles!</string>
    <string-array name="faculty_array">
        <item>Applied Science</item>
        <item>Architecture and Landscape Architecture</item>
        <item>Arts</item>
        <item>Audiology and Speech Sciences</item>
        <item>Sauder Business</item>
        <item>Community and Regional Planning</item>
        <item>Continuing Studies</item>
        <item>Education</item>
        <item>Dentistry</item>
        <item>Environmental Health</item>
        <item>Forestry</item>
        <item>Graduate Studies</item>
        <item>Health Disciplines</item>
        <item>Kinesiology</item>
        <item>Interdisciplinary Studies</item>
        <item>Journalism</item>
        <item>Land and Food Systems</item>
        <item>Peter A Allard Law</item>
        <item>iSchool</item>
        <item>Medicine</item>
        <item>Music</item>
        <item>Nursing</item>
        <item>Population and Health Studies</item>
        <item>Pharmaceutical Sciences</item>
        <item>Science</item>
        <item>Social Work</item>
    </string-array>

</resources>
