<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ppCreatorActivity">
    <!--ToDo: Add other fields (Name + Gender + Uni Ok for now-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ppCreatorActivity_textViewCreateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/create_profile"
                android:layout_marginTop="10dp"
                android:textSize="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ppCreatorActivity_editTextFirstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:endIconMode="clear_text">
                <EditText
                    android:id="@+id/ppCreatorActivity_editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/first_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ppCreatorActivity_editTextLastNameLayout"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text">
                <EditText
                    android:id="@+id/ppCreatorActivity_editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/last_name"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/ppCreatorActivity_textViewInterestSimilarity"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/interest_similarity"/>

            <SeekBar
                android:id="@+id/ppCreatorActivity_seekBarInterestSimilarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/ppCreatorActivity_textViewUserFaculty"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/interest_similarity"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"

                />



            <!-- ToDO: Consider seekbar orientation input-->
            <RadioGroup
                android:id="@+id/ppCreatorActivity_radioGroupSelectOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonOrientationMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/male"
                    android:fontFamily="sans-serif-thin"/>
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonOrientationFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/female"
                    android:fontFamily="sans-serif-thin"/>
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonOrientationOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other"
                    android:fontFamily="sans-serif-thin"/>

            </RadioGroup>

            <TextView
                android:id="@+id/ppCreatorActivity_textViewSelectInterest"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/i_am_interested_in"/>
            <!-- ToDO: Consider seekbar orientation input-->
            <RadioGroup
                android:id="@+id/ppCreatorActivity_radioGroupSelectInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonInterestMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/male"
                    android:fontFamily="sans-serif-thin"/>
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonInterestFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/female"
                    android:fontFamily="sans-serif-thin"/>
                <RadioButton
                    android:id="@+id/ppCreatorActivity_radioButtonInterestOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other"
                    android:fontFamily="sans-serif-thin"/>
            </RadioGroup>





        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>